attempt fix broken footer on mobiles

--- a/style.css
+++ b/style.css
@@ -631,6 +631,7 @@ article.page {
 footer {
     background:     url("./img/footer_mid.jpg") no-repeat 50%;
     height:         576px;
+    width:          2282px;
 }
 
 
